# hrdwr-monitor

./: .gitignore  LICENSE  README.md  data.ts  flake.nix  jest.config.js  justfile  package.json  shell.nix  tsconfig.json
app/: Cargo.toml  tauri.conf.json
app/bindings/: Response.ts  SensorError.ts
app/icons/: icon.icns
app/src/: main.rs  test_data.json
client/: App.css  App.tsx  Color.ts  Globals.css  Globals.d.ts  index.tsx  mock.ts  modules.d.ts
client/CogIcon/: index.ts
client/SystemStatus/: SystemStatus.tsx  index.ts
client/Thermal/: Thermal.css  Thermal.tsx
client/ThermalGauge/: ThermalGauge.css  ThermalGauge.tsx  index.ts
client/ThermometerIcon/: index.ts
client/UsageGauge/: UsageGauge.css  UsageGauge.tsx
client/facades/: Option.ts
public/: index.html
server/: Api.ts  Cargo.toml  HWiNFO.ts  OpenHardwareMonitor.ts  index.ts  server.py  tsconfig.json
server/__tests__/: Api.test.ts  data.ts
server/src/: main.rs
shared/: Percentage.ts
shared/Hardware/: Sensor.ts  data.json
shared/io-ts/: index.ts
shared/sum-types/: index.ts
src/: App.css  App.tsx  Color.ts  Globals.css  css.d.ts  modules.d.ts
src-tauri/: tauri.conf.json
src/Block/: Block.css  Block.tsx
src/CogIcon/: CogIcon.tsx
src/Thermal/: Thermal.css  Thermal.tsx  index.ts
src/ThermalGauge/: ThermalGauge.css  ThermalGauge.tsx
src/ThermometerIcon/: ThermometerIcon.tsx
src/UsageGauge/: UsageGauge.css  UsageGauge.tsx
src/VelocityGauge/: VelocityGauge.css  VelocityGauge.tsx
src/facades/: Option.ts
webpack/: client.config.ts  config.ts  tsconfig.json
(+4 files in other folders)
