[package]
name = "app"
version = "0.1.0"
description = "Hardware Monitoring"
authors = ["Thomas Lefebvre"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0.159"
tauri = { version = "1.2.4", features = [] }
structopt = "0.3.26"
exitfailure = "0.5.1"
reqwest = { version = "0.11.16", features = ["json"] }
thiserror = "1.0.40"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
